--- a/material2/src/app/app.component.html
+++ b/material2/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-  <span matBadge='5'>Notification</span>
+  <span [matBadge]='notifications' [matBadgeHidden] = 'notifications === 0'>Notification</span>
 </div>
 <div>
   <span matBadge='5' matBadgePosition='below before'>Notification</span>
@@ -9,4 +9,24 @@
 </div>
 <div>
   <span matBadge='5' matBadgePosition='above before'>Notification</span>
+</div>
+
+<div>
+  <span matBadge='5' matBadgeSize='small'>Notification</span>
+</div>
+<div>
+  <span matBadge='5' matBadgeSize='medium'>Notification</span>
+</div>
+<div>
+  <span matBadge='5' matBadgeSize='large'>Notification</span>
+</div>
+
+<div>
+  <span matBadge='5' matBadgeColor='primary'>Notification</span>
+</div>
+<div>
+  <span matBadge='5' matBadgeColor='accent'>Notification</span>
+</div>
+<div>
+  <span matBadge='5' matBadgeColor='warn' matBadgeOverlap='false'>Notification</span>
 </div>
